[Qt][Texmap] LayoutTests/compositing/masks/masked-ancestor does not render correctly. https://bugs.webkit.org/show_bug.cgi?id=75910

Reviewed by Simon Hausmann.

Handle the mask surface correctly when drawing in two passes. Also, improve the readability
of the code that decides whether to draw in two passes.

LayoutTests/compositing/masks/masked-ancestor.html tests this.

* platform/graphics/texmap/TextureMapperNode.cpp:
(WebCore::TextureMapperNode::computeAllTransforms):
(WebCore::TextureMapperNode::hasMoreThanOneTile):
(WebCore::TextureMapperNode::paintRecursive):
* platform/graphics/texmap/TextureMapperNode.h:


Canonical link: https://commits.webkit.org/92900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104728 268f45cc-cd09-0410-ab3c-d52691b4dbfc